--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -34,10 +34,10 @@
   bottom: 15px;
   height: 20px;
   border-radius: 50%;
-  background-color: white;
+  background-color: red;
   padding: 3px;
   font-weight: bold;
-  color: black;
+  color: white;
   font-weight: bold;
   display: flex;
   justify-content: center;
