--- a/client/src/components/featured/featured.css
+++ b/client/src/components/featured/featured.css
@@ -1,35 +1,41 @@
-.featured-container {
+.slideshow {
+  text-align: center;
+  margin: 0 auto;
   overflow: hidden;
-  position: relative;
-  min-height: 60vw;
+  max-width: 100%;
 }
 
-.arrowContainer {
-  position: absolute;
-  width: 10%;
-  height: 20%;
-  top: 0;
-  bottom: 0;
-  margin: auto;
+.slideshowSlider {
+  white-space: nowrap;
+  transition: ease 1000ms;
+}
+
+.slide {
+  display: inline-block;
+
+  height: 400px;
+  width: 100%;
+  border-radius: 40px;
+}
+
+/* Buttons */
+
+.slideshowDots {
+  text-align: center;
+}
+
+.slideshowDot {
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  position: relative;
   cursor: pointer;
-  z-index: 2;
+  margin: 15px 7px 0px;
+
+  background-color: #c4c4c4;
 }
 
-.wrapper {
-  width: 300vw;
-  height: 100%;
-  display: flex;
-  transition: all 1.5s ease-in-out;
-}
-
-.imgContainer {
-  width: 100vw;
-  height: 100%;
-  position: relative;
-}
-
-.arrow {
-  width: 12vw;
-  position: relative;
-  bottom: 7vw;
+.slideshowDot.active {
+  background-color: #6a0dad;
 }
