--- a/client/src/components/pizzaCard/pizzaCard.css
+++ b/client/src/components/pizzaCard/pizzaCard.css
@@ -1,27 +1,44 @@
 .pizzaCard {
-  width: 22%;
-  padding: 10px;
+  width: 50%;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 20px 40px;
   cursor: pointer;
 }
 
-.card-title {
+.pizzaWrapper {
+  padding: 10px;
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.pizzaWrapper:hover {
+  background-color: whitesmoke;
+  transform: scale(1.1);
+  transition: 1.2s ease-in-out;
+  border-radius: 10px;
+}
+
+.pizza-title {
   font-size: 18px;
   font-weight: bold;
   color: #d1411e;
 }
 
-.card-price {
-  font-size: 18px;
+.pizza-price {
+  font-size: 20px;
   font-weight: bold;
   color: #666;
 }
 
-.card-desc {
+.pizza-desc {
   text-align: center;
   color: #777;
+  margin: 10px;
+}
+
+.pizza-img {
+  border-radius: 10px;
 }
