--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -3,6 +3,8 @@
   border-radius: 10px;
   padding: 40px 0;
   text-align: center;
+  /* display: flex;
+  justify-content: space-around; */
 }
 
 .footer-container {
@@ -39,6 +41,7 @@
   width: 30%;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .footer-store {
