--- a/client/src/components/pizzaCard/pizzaCard.css
+++ b/client/src/components/pizzaCard/pizzaCard.css
@@ -1,14 +1,12 @@
 .pizzaCard {
-  width: 50%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
+  flex-wrap: wrap;
+  flex: 0 0 33.3333%;
+  padding: 20px;
+  margin: 20px;
 }
 
 .pizzaWrapper {
-  padding: 10px;
-  margin: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
