--- a/client/src/components/pizzaList/pizzaList.css
+++ b/client/src/components/pizzaList/pizzaList.css
@@ -4,7 +4,7 @@
 
 .list-wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
 }
