--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -3,8 +3,8 @@
   border-radius: 10px;
   padding: 40px 0;
   text-align: center;
-  /* display: flex;
-  justify-content: space-around; */
+  display: flex;
+  justify-content: space-around;
 }
 
 .footer-container {
