--- a/client/src/components/footer/footer.css
+++ b/client/src/components/footer/footer.css
@@ -58,6 +58,7 @@
   justify-content: center;
   position: relative;
   right: 10%;
+  cursor: pointer;
 }
 
 .footer-store-imges img {
@@ -75,4 +76,56 @@
   font-weight: 400;
   left: 30%;
   top: 4vw;
+}
+
+@media (max-width: 480px) {
+  .footer-section p,
+  .footer-section span {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 15px;
+    padding: 0;
+    margin: 0;
+  }
+
+  .footer-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .footer-section-social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+    right: 10%;
+  }
+
+  .footer-icon {
+    font-size: 15px;
+    padding: 0;
+    margin: 5px;
+  }
+
+  .footer-store {
+    display: none;
+  }
+
+  .footer-store-imges {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    right: 0px;
+  }
+
+  .copyrights {
+    position: relative;
+    left: 10%;
+  }
 }
