--- a/client/src/components/pizzaList/pizzaList.css
+++ b/client/src/components/pizzaList/pizzaList.css
@@ -8,3 +8,12 @@
   justify-content: center;
   align-items: center;
 }
+
+@media (max-width: 380px) {
+  .pizzaList {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
